--- a/package.xml
+++ b/package.xml
@@ -10,12 +10,14 @@
   <license>BSD2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
   
+  <build_depend>actionlib_msgs </build_depend>
+  <exec_depend>actionlib_msgs </exec_depend>
+  
+
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>message_generation</exec_depend>
 
   <test_depend>roslaunch</test_depend>
 
